--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "multiselect-react-dropdown": "^1.6.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-multiselect-checkboxes": "^0.1.1",
     "react-scripts": "4.0.3",
+    "react-select": "^4.1.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
