--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-multiselect-checkboxes": "^0.1.1",
     "react-scripts": "4.0.3",
     "react-select": "^4.1.0",
+    "reactstrap": "^8.9.0",
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
